{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 32,
  "lineage": "08d8360c-667e-2d7c-6355-f75d36348ef0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-072cc9718e5e749bf",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-072cc9718e5e749bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 248,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072cc9718e5e749bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "CommitAuthor": "balasl342",
              "Environment": "pr5160",
              "Name": "iot-private-subnet-2-pr5160",
              "Repository": "TuringGpt/iac-test-automations",
              "Type": "Private"
            },
            "vpc_id": "vpc-084784fec817a2784"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0cf66cd821439cdc7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-0cf66cd821439cdc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf66cd821439cdc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "CommitAuthor": "balasl342",
              "Environment": "pr5160",
              "Name": "iot-private-subnet-1-pr5160",
              "Repository": "TuringGpt/iac-test-automations",
              "Type": "Private"
            },
            "vpc_id": "vpc-084784fec817a2784"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:vpc/vpc-084784fec817a2784",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0eb65af3889ba4841",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-096ea572b45cebc14",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-084784fec817a2784",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-099c5f0fd60bbd443",
            "owner_id": "342597974367",
            "tags": {
              "CommitAuthor": "balasl342",
              "Environment": "pr5160",
              "Name": "iot-pipeline-vpc-pr5160",
              "Repository": "TuringGpt/iac-test-automations"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0601422bf6afa8ac3",
            "arn": "arn:aws:ec2:us-east-1:342597974367:instance/i-0b7a2b270fc5a33d2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:342597974367:key/b6983ebf-e57c-49c7-be07-a45c1b192d44",
                "tags": {
                  "Environment": "default",
                  "ManagedBy": "Terraform",
                  "MigrationPhase": "transition",
                  "Name": "app-data-volume-us-east-1a-synth101000770",
                  "Project": "LegacyMigration"
                },
                "tags_all": {
                  "Environment": "default",
                  "ManagedBy": "Terraform",
                  "MigrationPhase": "transition",
                  "Name": "app-data-volume-us-east-1a-synth101000770",
                  "Project": "LegacyMigration"
                },
                "throughput": 125,
                "volume_id": "vol-0311648ff128b0c5c",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LegacyAppRole-profile-synth101000770",
            "id": "i-0b7a2b270fc5a33d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e96f15d573d901da",
            "private_dns": "ip-10-0-1-154.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Environment": "default",
                  "ManagedBy": "Terraform",
                  "MigrationPhase": "transition",
                  "Project": "LegacyMigration"
                },
                "tags_all": {
                  "Environment": "default",
                  "ManagedBy": "Terraform",
                  "MigrationPhase": "transition",
                  "Project": "LegacyMigration"
                },
                "throughput": 0,
                "volume_id": "vol-00a68475ec03abec5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cf66cd821439cdc7",
            "tags": {
              "AvailabilityZone": "us-east-1a",
              "Environment": "default",
              "MigrationPhase": "transition",
              "Name": "app-server-us-east-1a-synth101000770"
            },
            "tags_all": {
              "AvailabilityZone": "us-east-1a",
              "Environment": "default",
              "ManagedBy": "Terraform",
              "MigrationPhase": "transition",
              "Name": "app-server-us-east-1a-synth101000770",
              "Project": "LegacyMigration"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b89d05cfd36df15c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.imported_role_profile",
            "aws_iam_role.imported_role",
            "aws_security_group.imported_sg",
            "data.aws_ami.amazon_linux_2",
            "data.aws_vpc.existing"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0601422bf6afa8ac3",
            "arn": "arn:aws:ec2:us-east-1:342597974367:instance/i-00d85a2254110a0e0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:342597974367:key/b6983ebf-e57c-49c7-be07-a45c1b192d44",
                "tags": {
                  "Environment": "default",
                  "ManagedBy": "Terraform",
                  "MigrationPhase": "transition",
                  "Name": "app-data-volume-us-east-1b-synth101000770",
                  "Project": "LegacyMigration"
                },
                "tags_all": {
                  "Environment": "default",
                  "ManagedBy": "Terraform",
                  "MigrationPhase": "transition",
                  "Name": "app-data-volume-us-east-1b-synth101000770",
                  "Project": "LegacyMigration"
                },
                "throughput": 125,
                "volume_id": "vol-04daaa3fa64c800af",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LegacyAppRole-profile-synth101000770",
            "id": "i-00d85a2254110a0e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e743a672b51171b8",
            "private_dns": "ip-10-0-2-227.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Environment": "default",
                  "ManagedBy": "Terraform",
                  "MigrationPhase": "transition",
                  "Project": "LegacyMigration"
                },
                "tags_all": {
                  "Environment": "default",
                  "ManagedBy": "Terraform",
                  "MigrationPhase": "transition",
                  "Project": "LegacyMigration"
                },
                "throughput": 0,
                "volume_id": "vol-016f6de52edbcf446",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072cc9718e5e749bf",
            "tags": {
              "AvailabilityZone": "us-east-1b",
              "Environment": "default",
              "MigrationPhase": "transition",
              "Name": "app-server-us-east-1b-synth101000770"
            },
            "tags_all": {
              "AvailabilityZone": "us-east-1b",
              "Environment": "default",
              "ManagedBy": "Terraform",
              "MigrationPhase": "transition",
              "Name": "app-server-us-east-1b-synth101000770",
              "Project": "LegacyMigration"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b89d05cfd36df15c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.imported_role_profile",
            "aws_iam_role.imported_role",
            "aws_security_group.imported_sg",
            "data.aws_ami.amazon_linux_2",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:loadbalancer/app/app-alb-synth101000770/15b804ac428c34fa",
            "arn_suffix": "app/app-alb-synth101000770/15b804ac428c34fa",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-app-alb-synth101000770-137796388.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:342597974367:loadbalancer/app/app-alb-synth101000770/15b804ac428c34fa",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-alb-synth101000770",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08624f74f145e0ef1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-072cc9718e5e749bf"
              },
              {
                "subnet_id": "subnet-0cf66cd821439cdc7"
              }
            ],
            "subnets": [
              "subnet-072cc9718e5e749bf",
              "subnet-0cf66cd821439cdc7"
            ],
            "tags": {
              "Environment": "default",
              "MigrationPhase": "transition",
              "Name": "app-alb-synth101000770"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "MigrationPhase": "transition",
              "Name": "app-alb-synth101000770",
              "Project": "LegacyMigration"
            },
            "vpc_id": "vpc-084784fec817a2784",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:listener/app/app-alb-synth101000770/15b804ac428c34fa/9c1e782b1a1506c5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/blue-tg-synth101000770/e370c7641f1031da",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:342597974367:listener/app/app-alb-synth101000770/15b804ac428c34fa/9c1e782b1a1506c5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:loadbalancer/app/app-alb-synth101000770/15b804ac428c34fa",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "default",
              "MigrationPhase": "transition",
              "Name": "http-listener-synth101000770"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "MigrationPhase": "transition",
              "Name": "http-listener-synth101000770",
              "Project": "LegacyMigration"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.blue",
            "aws_security_group.alb",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/blue-tg-synth101000770/e370c7641f1031da",
            "arn_suffix": "targetgroup/blue-tg-synth101000770/e370c7641f1031da",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/blue-tg-synth101000770/e370c7641f1031da",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "blue-tg-synth101000770",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "DeploymentColor": "blue",
              "Environment": "default",
              "MigrationPhase": "transition",
              "Name": "blue-tg-synth101000770"
            },
            "tags_all": {
              "DeploymentColor": "blue",
              "Environment": "default",
              "ManagedBy": "Terraform",
              "MigrationPhase": "transition",
              "Name": "blue-tg-synth101000770",
              "Project": "LegacyMigration"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-084784fec817a2784"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/green-tg-synth101000770/9fab81a8f2c4e734",
            "arn_suffix": "targetgroup/green-tg-synth101000770/9fab81a8f2c4e734",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/green-tg-synth101000770/9fab81a8f2c4e734",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "green-tg-synth101000770",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "DeploymentColor": "green",
              "Environment": "default",
              "MigrationPhase": "transition",
              "Name": "green-tg-synth101000770"
            },
            "tags_all": {
              "DeploymentColor": "green",
              "Environment": "default",
              "ManagedBy": "Terraform",
              "MigrationPhase": "transition",
              "Name": "green-tg-synth101000770",
              "Project": "LegacyMigration"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-084784fec817a2784"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/blue-tg-synth101000770/e370c7641f1031da-20251030121620009100000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/blue-tg-synth101000770/e370c7641f1031da",
            "target_id": "i-0b7a2b270fc5a33d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.imported_role_profile",
            "aws_iam_role.imported_role",
            "aws_instance.app_server",
            "aws_lb_target_group.blue",
            "aws_security_group.imported_sg",
            "data.aws_ami.amazon_linux_2",
            "data.aws_vpc.existing"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/blue-tg-synth101000770/e370c7641f1031da-20251030121620031100000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/blue-tg-synth101000770/e370c7641f1031da",
            "target_id": "i-00d85a2254110a0e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.imported_role_profile",
            "aws_iam_role.imported_role",
            "aws_instance.app_server",
            "aws_lb_target_group.blue",
            "aws_security_group.imported_sg",
            "data.aws_ami.amazon_linux_2",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:security-group/sg-08624f74f145e0ef1",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08624f74f145e0ef1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg-synth101000770",
            "name_prefix": "",
            "owner_id": "342597974367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "MigrationPhase": "transition",
              "Name": "alb-sg-synth101000770"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "MigrationPhase": "transition",
              "Name": "alb-sg-synth101000770",
              "Project": "LegacyMigration"
            },
            "timeouts": null,
            "vpc_id": "vpc-084784fec817a2784"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "imported_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:security-group/sg-0b89d05cfd36df15c",
            "description": "Imported security group for legacy application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b89d05cfd36df15c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "legacy-app-sg-synth101000770",
            "name_prefix": "",
            "owner_id": "342597974367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "ImportedResource": "true",
              "MigrationPhase": "transition",
              "Name": "legacy-app-sg-synth101000770"
            },
            "tags_all": {
              "Environment": "default",
              "ImportedResource": "true",
              "ManagedBy": "Terraform",
              "MigrationPhase": "transition",
              "Name": "legacy-app-sg-synth101000770",
              "Project": "LegacyMigration"
            },
            "timeouts": null,
            "vpc_id": "vpc-084784fec817a2784"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.existing"
          ]
        }
      ]
    }
  ]
}